--- a/style/Style.css
+++ b/style/Style.css
@@ -19,3 +19,7 @@ width: 500px
       text-align: justify;
       width: [500px];
   }
+.PersonalityType {width: 300px}
+
+.leadershipstyle {width: 400px}
+.PersonalityTypeResult {width: 300px}
